--- a/assets/pug/pages/template/stack.pug
+++ b/assets/pug/pages/template/stack.pug
@@ -269,24 +269,24 @@ html(lang='en')
                     h3.text-lg.font-bold Colored Cards Stacked
                     p   Stacked cards using 
                       strong .stack 
-                      |   class.            
+                      |   class.
                     div.preview-code.tab-links
                       button.p-0.tab.tab-lifted.tab-active(data-tabFilter="1" class="tab-link") Preview  
                       button.p-0.tab.tab-lifted(data-tabFilter="2" class="tab-link tab-2") Html
-                div.card-body                                   
+                div.card-body                 
                   div.tabs-content
                     div(data-tabContent="1" class="tab-pan active show first:rounded-tl-none rounded-5")
                       div.flex.flex-wrap.gap-2.justify-center
                         div.stack.mb-3 
-                          div.stack-item.card.bg-danger.text-white.shawod-none.rounded-2xl(class="!w-auto !h-auto")
+                          div.stack-item.card.bg-danger.text-white.shawod-none.rounded-2xl(class="!w-auto !h-auto dark:bg-danger")
                             div.card-body 
                               h3.card-title Latest News
                               p Click here, for more latest update!!
-                          div.stack-item.card.bg-danger.text-white.shawod-none.rounded-2xl(class="!w-auto !h-auto")
+                          div.stack-item.card.bg-danger.text-white.shawod-none.rounded-2xl(class="!w-auto !h-auto dark:bg-danger")
                             div.card-body 
                               h3.card-title Latest News
                               p Click here, for more latest update!!
-                          div.stack-item.card.bg-danger.text-white.shawod-none.rounded-2xl(class="!w-auto !h-auto")
+                          div.stack-item.card.bg-danger.text-white.shawod-none.rounded-2xl(class="!w-auto !h-auto dark:bg-danger")
                             div.card-body 
                               h3.card-title Latest News
                               p Click here, for more latest update!!
@@ -297,19 +297,19 @@ html(lang='en')
                         code(class="dark:bg-sidebar-dark2")
                           |&lt;div class="flex flex-wrap justify-center gap-2"&gt;
                           |    &lt;div class="mb-3 stack"&gt;
-                          |        &lt;div class="stack-item card bg-danger text-white shawod-none rounded-2xl !w-auto !h-auto"&gt;
+                          |        &lt;div class="stack-item card bg-danger text-white shawod-none rounded-2xl !w-auto !h-auto dark:bg-sidebar-dark2"&gt;
                           |            &lt;div class="card-body"&gt; 
                           |                &lt;h3 class="card-title"&gt; Latest News &lt;/h3&gt;
                           |                &lt;p&gt; Click here, for more latest update!! &lt;/p&gt;
                           |            &lt;/div&gt;
                           |        &lt;/div&gt;
-                          |        &lt;div class="stack-item card bg-danger text-white shawod-none rounded-2xl !w-auto !h-auto"&gt;
+                          |        &lt;div class="stack-item card bg-danger text-white shawod-none rounded-2xl !w-auto !h-auto dark:bg-sidebar-dark2"&gt;
                           |            &lt;div class="card-body"&gt; 
                           |                &lt;h3 class="card-title"&gt; Latest News &lt;/h3&gt;
                           |                &lt;p&gt; Click here, for more latest update!! &lt;/p&gt;
                           |            &lt;/div&gt;
                           |        &lt;/div&gt;
-                          |        &lt;div class="stack-item card bg-danger text-white shawod-none rounded-2xl !w-auto !h-auto"&gt;
+                          |        &lt;div class="stack-item card bg-danger text-white shawod-none rounded-2xl !w-auto !h-auto dark:bg-sidebar-dark2"&gt;
                           |            &lt;div class="card-body"&gt; 
                           |                &lt;h3 class="card-title"&gt; Latest News &lt;/h3&gt;
                           |                &lt;p&gt; Click here, for more latest update!! &lt;/p&gt;
@@ -333,15 +333,15 @@ html(lang='en')
                     div(data-tabContent="1" class="tab-pan active show first:rounded-tl-none rounded-5")
                       div.flex.flex-wrap.gap-2.justify-center
                         div.stack.mb-3 
-                          div.stack-item.card.bg-info.text-white.shawod-none.rounded-2xl(class="!w-auto !h-auto")
+                          div.stack-item.card.bg-info.text-white.shawod-none.rounded-2xl(class="!w-auto !h-auto dark:bg-info")
                             div.card-body 
                               h3.card-title Notifications
                               p You have 4 unread messages. Tap to see
-                          div.stack-item.card.bg-danger.text-white.shawod-none.rounded-2xl(class="!w-auto !h-auto")
+                          div.stack-item.card.bg-danger.text-white.shawod-none.rounded-2xl(class="!w-auto !h-auto dark:bg-danger")
                             div.card-body 
                               h3.card-title Notifications
                               p You have 4 unread messages. Tap to see
-                          div.stack-item.card.bg-warning.text-white.shawod-none.rounded-2xl(class="!w-auto !h-auto")
+                          div.stack-item.card.bg-warning.text-white.shawod-none.rounded-2xl(class="!w-auto !h-auto dark:bg-warning")
                             div.card-body 
                               h3.card-title Notifications
                               p You have 4 unread messages. Tap to see
@@ -352,19 +352,19 @@ html(lang='en')
                         code(class="dark:bg-sidebar-dark2")
                           |&lt;div class="flex flex-wrap justify-center gap-2"&gt;
                           |    &lt;div class="mb-3 stack"&gt;
-                          |        &lt;div class="stack-item card bg-info text-white shawod-none rounded-2xl !w-auto !h-auto"&gt;
+                          |        &lt;div class="stack-item card bg-info text-white shawod-none rounded-2xl !w-auto !h-auto dark:bg-info"&gt;
                           |            &lt;div class="card-body"&gt; 
                           |                &lt;h3 class="card-title"&gt; Notifications &lt;/h3&gt;
                           |                &lt;p&gt; You have 4 unread messages. Tap to see &lt;/p&gt;
                           |            &lt;/div&gt;
                           |        &lt;/div&gt;
-                          |        &lt;div class="stack-item card bg-danger text-white shawod-none rounded-2xl !w-auto !h-auto"&gt;
+                          |        &lt;div class="stack-item card bg-danger text-white shawod-none rounded-2xl !w-auto !h-auto dark:bg-danger"&gt;
                           |            &lt;div class="card-body"&gt; 
                           |                &lt;h3 class="card-title"&gt; Notifications &lt;/h3&gt;
                           |                &lt;p&gt; You have 4 unread messages. Tap to see &lt;/p&gt;
                           |            &lt;/div&gt;
                           |        &lt;/div&gt;
-                          |        &lt;div class="stack-item card bg-warning text-white shawod-none rounded-2xl !w-auto !h-auto"&gt;
+                          |        &lt;div class="stack-item card bg-warning text-white shawod-none rounded-2xl !w-auto !h-auto dark:dark:bg-warning"&gt;
                           |            &lt;div class="card-body"&gt; 
                           |                &lt;h3 class="card-title"&gt; Notifications &lt;/h3&gt;
                           |                &lt;p&gt; You have 4 unread messages. Tap to see &lt;/p&gt;
