--- a/html/template/apex-chart.html
+++ b/html/template/apex-chart.html
@@ -1145,8 +1145,8 @@
                       <div class="apex-custom-tooltip apex-tooltip-style1 mb-[-0.9375rem]" id="areachart"></div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div id="areachart" class="apex-custom-tooltip apex-tooltip-style1 mb-[-0.9375rem]"&gt;&lt;/div&gt;</code></pre>
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"> <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll  dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div id="areachart" class="apex-custom-tooltip apex-tooltip-style1 mb-[-0.9375rem]"&gt;&lt;/div&gt;</code></pre>
                     </div>
                   </div>
                 </div>
@@ -1170,8 +1170,8 @@
                       <div id="columnchart"></div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div id="columnchart"&gt;&lt;/div&gt;</code></pre>
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"> <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll  dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div id="columnchart"&gt;&lt;/div&gt;</code></pre>
                     </div>
                   </div>
                 </div>
@@ -1195,8 +1195,8 @@
                       <div id="advancedareachart"></div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div id="advancedareachart"&gt;&lt;/div&gt;</code></pre>
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"> <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll  dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2"> &lt;div id="advancedareachart"&gt;&lt;/div&gt;</code></pre>
                     </div>
                   </div>
                 </div>
@@ -1220,8 +1220,8 @@
                       <div class="round-bar" id="roundedcolumnchart"></div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div id="roundedcolumnchart" class="round-bar"&gt;&lt;/div&gt;</code></pre>
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"> <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll  dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div id="roundedcolumnchart" class="round-bar"&gt;&lt;/div&gt;</code></pre>
                     </div>
                   </div>
                 </div>
@@ -1248,8 +1248,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div id="splineAreaChart1"&gt;&lt;/div&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"> <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll  dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div id="splineAreaChart1"&gt;&lt;/div&gt;
 &lt;div id="splineAreaChart2" class="absolute inset-0"&gt;&lt;/div&gt;</code></pre>
                     </div>
                   </div>
@@ -1274,8 +1274,8 @@
                       <div id="groupbarchart"></div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div id="groupbarchart"&gt;&lt;/div&gt;</code></pre>
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"> <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll  dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div id="groupbarchart"&gt;&lt;/div&gt;</code></pre>
                     </div>
                   </div>
                 </div>
@@ -1299,8 +1299,8 @@
                       <div id="linechart"></div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div id="linechart"&gt;&lt;/div&gt;</code></pre>
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"> <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll  dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div id="linechart"&gt;&lt;/div&gt;</code></pre>
                     </div>
                   </div>
                 </div>
@@ -1324,8 +1324,8 @@
                       <div id="bubblechart"></div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div id="bubblechart"&gt;&lt;/div&gt;</code></pre>
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"> <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll  dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div id="bubblechart"&gt;&lt;/div&gt;</code></pre>
                     </div>
                   </div>
                 </div>
@@ -1349,8 +1349,8 @@
                       <div id="candlestickchart"></div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div id="candlestickchart"&gt;&lt;/div&gt;</code></pre>
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"> <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll  dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div id="candlestickchart"&gt;&lt;/div&gt;</code></pre>
                     </div>
                   </div>
                 </div>
@@ -1374,8 +1374,8 @@
                       <div id="boxplotchart"></div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div id="boxplotchart"&gt;&lt;/div&gt;</code></pre>
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"> <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll  dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div id="boxplotchart"&gt;&lt;/div&gt;</code></pre>
                     </div>
                   </div>
                 </div>
@@ -1399,8 +1399,8 @@
                       <div class="custom-data-label 2md:-mt-[0.75rem] ml-[-2.5rem] 2md:ml-0" id="barchart"></div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div id="barchart" class="custom-data-label 2md:-mt-[0.75rem] ml-[-2.5rem] 2md:ml-0"&gt;&lt;/div&gt;</code></pre>
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"> <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll  dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div id="barchart" class="custom-data-label 2md:-mt-[0.75rem] ml-[-2.5rem] 2md:ml-0"&gt;&lt;/div&gt;</code></pre>
                     </div>
                   </div>
                 </div>
@@ -1424,8 +1424,8 @@
                       <div id="linedatalabelchart"></div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div id="linedatalabelchart"&gt;&lt;/div&gt;</code></pre>
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"> <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll  dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div id="linedatalabelchart"&gt;&lt;/div&gt;</code></pre>
                     </div>
                   </div>
                 </div>
@@ -1449,8 +1449,8 @@
                       <div class="my-[0.625rem] 2md:my-0" id="radialchart"></div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div id="radialchart" class="my-[0.625rem]"&gt;&lt;/div&gt;</code></pre>
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"> <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll  dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div id="radialchart" class="my-[0.625rem]"&gt;&lt;/div&gt;</code></pre>
                     </div>
                   </div>
                 </div>
@@ -1474,8 +1474,8 @@
                       <div id="polarareachart"></div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div id="polarareachart"&gt;&lt;/div&gt;</code></pre>
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"> <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll  dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div id="polarareachart"&gt;&lt;/div&gt;</code></pre>
                     </div>
                   </div>
                 </div>
@@ -1499,8 +1499,8 @@
                       <div class="mb-[-0.9375rem]" id="radalchart"></div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div id="radalchart" class="mb-[-0.9375rem]"&gt;&lt;/div&gt;</code></pre>
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"> <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll  dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div id="radalchart" class="mb-[-0.9375rem]"&gt;&lt;/div&gt;</code></pre>
                     </div>
                   </div>
                 </div>
@@ -1524,8 +1524,8 @@
                       <div class="mb-[-0.9375rem]" id="rangeareachart"></div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div id="rangeareachart" class="mb-[-0.9375rem]"&gt;&lt;/div&gt;</code></pre>
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"> <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll  dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div id="rangeareachart" class="mb-[-0.9375rem]"&gt;&lt;/div&gt;</code></pre>
                     </div>
                   </div>
                 </div>
