--- a/html/template/radial-progress.html
+++ b/html/template/radial-progress.html
@@ -1209,21 +1209,21 @@
                   <div class="tabs-content">
                     <div class="tab-pan active show first:rounded-tl-none rounded-5" data-tabContent="1">
                       <div class="flex items-center justify-center flex-wrap gap-4">
-                        <div class="radial-progress radial-sm text-primary" style="--value:5;">5% </div>
-                        <div class="radial-progress radial-sm text-secondary" style="--value:25;">25% </div>
-                        <div class="radial-progress radial-sm text-info" style="--value:57;">57% </div>
-                        <div class="radial-progress radial-sm text-success" style="--value:78;">78%</div>
-                        <div class="radial-progress radial-sm text-warning" style="--value:88;">88%</div>
+                        <div class="radial-progress radial-sm text-primary dark:bg-sidebar-dark2" style="--value:5;">5% </div>
+                        <div class="radial-progress radial-sm text-secondary dark:bg-sidebar-dark2" style="--value:25;">25% </div>
+                        <div class="radial-progress radial-sm text-info dark:bg-sidebar-dark2" style="--value:57;">57% </div>
+                        <div class="radial-progress radial-sm text-success dark:bg-sidebar-dark2" style="--value:78;">78%</div>
+                        <div class="radial-progress radial-sm text-warning dark:bg-sidebar-dark2" style="--value:88;">88%</div>
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
                       <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white">  <i data-feather="clipboard"></i></button>
                       <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap items-center justify-center gap-2"&gt;
-   &lt;div class="radial-progress radial-sm text-primary" style="--value:5;"&gt; 5% &lt;/div&gt;
-   &lt;div class="radial-progress radial-sm text-secondary" style="--value:25;"&gt; 25% &lt;/div&gt;
-   &lt;div class="radial-progress radial-sm text-info" style="--value:57;"&gt; 57% &lt;/div&gt;
-   &lt;div class="radial-progress radial-sm text-success" style="--value:78;"&gt; 78% &lt;/div&gt;
-   &lt;div class="radial-progress radial-sm text-warning" style="--value:88;"&gt; 88% &lt;/div&gt;
+   &lt;div class="radial-progress radial-sm  dark:bg-sidebar-dark2 text-primary" style="--value:5;  " "&gt; 5% &lt;/div&gt;
+   &lt;div class="radial-progress radial-sm  dark:bg-sidebar-dark2 text-secondary" style="--value:25;  " "&gt; 25% &lt;/div&gt;
+   &lt;div class="radial-progress radial-sm  dark:bg-sidebar-dark2 text-info" style="--value:57;  " "&gt; 57% &lt;/div&gt;
+   &lt;div class="radial-progress radial-sm  dark:bg-sidebar-dark2 text-success" style="--value:78;  " "&gt; 78% &lt;/div&gt;
+   &lt;div class="radial-progress radial-sm  dark:bg-sidebar-dark2 text-warning" style="--value:88;  " "&gt; 88% &lt;/div&gt;
 &lt;/div&gt;</code></pre>
                     </div>
                   </div>
@@ -1247,22 +1247,22 @@
                     <div class="tab-pan active show first:rounded-tl-none rounded-5" data-tabContent="1">
                       <div class="flex items-center justify-center flex-wrap gap-4">
                         <div class="flex flex-col justify-center items-center gap-2 text-primary">
-                          <div class="radial-progress" style="--value:5;"> </div><span>5%</span>
+                          <div class="radial-progress dark:bg-sidebar-dark2" style="--value:5;"> </div><span>5%</span>
                         </div>
                         <div class="flex flex-col justify-center items-center gap-2 text-secondary">
-                          <div class="radial-progress" style="--value:25;"> </div><span>25% </span>
+                          <div class="radial-progress dark:bg-sidebar-dark2" style="--value:25;"> </div><span>25% </span>
                         </div>
                         <div class="flex flex-col justify-center items-center gap-2 text-info">
-                          <div class="radial-progress" style="--value:57;"> </div><span>57% </span>
+                          <div class="radial-progress dark:bg-sidebar-dark2" style="--value:57;"> </div><span>57% </span>
                         </div>
                         <div class="flex flex-col justify-center items-center gap-2 text-success">
-                          <div class="radial-progress" style="--value:78;"> </div><span>78%</span>
+                          <div class="radial-progress dark:bg-sidebar-dark2" style="--value:78;"> </div><span>78%</span>
                         </div>
                         <div class="flex flex-col justify-center items-center gap-2 text-warning">
-                          <div class="radial-progress" style="--value:88;"> </div><span>88%</span>
+                          <div class="radial-progress dark:bg-sidebar-dark2" style="--value:88;"> </div><span>88%</span>
                         </div>
                         <div class="flex flex-col justify-center items-center gap-2 text-danger">
-                          <div class="radial-progress" style="--value:97;"> </div><span>97%</span>
+                          <div class="radial-progress dark:bg-sidebar-dark2" style="--value:97;"> </div><span>97%</span>
                         </div>
                       </div>
                     </div>
@@ -1270,27 +1270,27 @@
                       <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white">  <i data-feather="clipboard"></i></button>
                       <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap items-center justify-center gap-2"&gt;
    &lt;div class="flex flex-col items-center justify-center gap-2 text-primary"&gt;
-       &lt;div class="radial-progress bg-gray-light" style="--value:5;"&gt;&lt;/div&gt;
+       &lt;div class="radial-progress bg-gray-light dark:bg-sidebar-dark2" style="--value:5;"&gt;&lt;/div&gt;
        &lt;span&gt; 5% &lt;/span&gt;
    &lt;/div&gt;
    &lt;div class="flex flex-col items-center justify-center gap-2 text-secondary"&gt;
-       &lt;div class="radial-progress bg-gray-light" style="--value:25;"&gt; 25% &lt;/div&gt;
+       &lt;div class="radial-progress bg-gray-light dark:bg-sidebar-dark2" style="--value:25;"&gt; 25% &lt;/div&gt;
        &lt;span&gt; 25% &lt;/span&gt;
    &lt;/div&gt;
    &lt;div class="flex flex-col items-center justify-center gap-2 text-info"&gt;
-       &lt;div class="radial-progress bg-gray-light" style="--value:57;"&gt; 57% &lt;/div&gt;
+       &lt;div class="radial-progress bg-gray-light dark:bg-sidebar-dark2" style="--value:57;"&gt; 57% &lt;/div&gt;
        &lt;span&gt; 57% &lt;/span&gt;
    &lt;/div&gt;
    &lt;div class="flex flex-col items-center justify-center gap-2 text-success"&gt;
-       &lt;div class="radial-progress bg-gray-light" style="--value:78;"&gt; 78% &lt;/div&gt;
+       &lt;div class="radial-progress bg-gray-light dark:bg-sidebar-dark2" style="--value:78;"&gt; 78% &lt;/div&gt;
        &lt;span&gt; 78% &lt;/span&gt;
    &lt;/div&gt;
    &lt;div class="flex flex-col items-center justify-center gap-2 text-warning"&gt;
-       &lt;div class="radial-progress bg-gray-light" style="--value:88;"&gt; 88% &lt;/div&gt;
+       &lt;div class="radial-progress bg-gray-light dark:bg-sidebar-dark2" style="--value:88;"&gt; 88% &lt;/div&gt;
        &lt;span&gt; 88% &lt;/span&gt;
    &lt;/div&gt;
    &lt;div class="flex flex-col items-center justify-center gap-2 text-danger"&gt;
-       &lt;div class="radial-progress bg-gray-light" style="--value:97;"&gt; 97% &lt;/div&gt;
+       &lt;div class="radial-progress bg-gray-light dark:bg-sidebar-dark2" style="--value:97;"&gt; 97% &lt;/div&gt;
        &lt;span&gt; 97% &lt;/span&gt;
    &lt;/div&gt;
 &lt;/div&gt;</code></pre>
@@ -1315,21 +1315,21 @@
                   <div class="tabs-content">
                     <div class="tab-pan active show first:rounded-tl-none rounded-5" data-tabContent="1">
                       <div class="flex items-center justify-center flex-wrap gap-4">
-                        <div class="radial-progress radial-xs text-primary" style="--value:70;">70% </div>
-                        <div class="radial-progress radial-sm text-secondary" style="--value:70;">70% </div>
-                        <div class="radial-progress radial-md text-info" style="--value:70;">70% </div>
-                        <div class="radial-progress radial-lg text-success" style="--value:70;">70% </div>
-                        <div class="radial-progress radial-xl text-warning" style="--value:70;">70% </div>
+                        <div class="radial-progress radial-xs text-primary dark:bg-sidebar-dark2" style="--value:70;">70% </div>
+                        <div class="radial-progress radial-sm text-secondary dark:bg-sidebar-dark2" style="--value:70;">70% </div>
+                        <div class="radial-progress radial-md text-info dark:bg-sidebar-dark2" style="--value:70;">70% </div>
+                        <div class="radial-progress radial-lg text-success dark:bg-sidebar-dark2" style="--value:70;">70% </div>
+                        <div class="radial-progress radial-xl text-warning dark:bg-sidebar-dark2" style="--value:70;">70% </div>
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
                       <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white">  <i data-feather="clipboard"></i></button>
                       <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap items-center justify-center gap-2"&gt;
-   &lt;div class="radial-progress radial-xs text-primary" style="--value:70;"&gt; 70% &lt;/div&gt;
-   &lt;div class="radial-progress radial-sm text-primary" style="--value:70;"&gt; 70% &lt;/div&gt;
-   &lt;div class="radial-progress radial-md text-primary" style="--value:70;"&gt; 70% &lt;/div&gt;
-   &lt;div class="radial-progress radial-lg text-primary" style="--value:70;"&gt; 70% &lt;/div&gt;
-   &lt;div class="radial-progress radial-xl text-primary" style="--value:70;"&gt; 70% &lt;/div&gt;
+   &lt;div class="radial-progress radial-xs text-primary dark:bg-sidebar-dark2" style="--value:70;"&gt; 70% &lt;/div&gt;
+   &lt;div class="radial-progress radial-sm text-primary dark:bg-sidebar-dark2" style="--value:70;"&gt; 70% &lt;/div&gt;
+   &lt;div class="radial-progress radial-md text-primary dark:bg-sidebar-dark2" style="--value:70;"&gt; 70% &lt;/div&gt;
+   &lt;div class="radial-progress radial-lg text-primary dark:bg-sidebar-dark2" style="--value:70;"&gt; 70% &lt;/div&gt;
+   &lt;div class="radial-progress radial-xl text-primary dark:bg-sidebar-dark2" style="--value:70;"&gt; 70% &lt;/div&gt;
 &lt;/div&gt;</code></pre>
                     </div>
                   </div>
