--- a/html/template/stack.html
+++ b/html/template/stack.html
@@ -1398,31 +1398,31 @@
                 <div class="card-header pb-2 header-bottom-border">
                   <div class="flex flex-col">
                     <h3 class="text-lg font-bold">Colored Cards Stacked</h3>
-                    <p>  Stacked cards using <strong>.stack </strong>  class.            </p>
+                    <p>  Stacked cards using <strong>.stack </strong>  class.</p>
                     <div class="preview-code tab-links">
                       <button class="p-0 tab tab-lifted tab-active tab-link" data-tabFilter="1">Preview  </button>
                       <button class="p-0 tab tab-lifted tab-link tab-2" data-tabFilter="2">Html</button>
                     </div>
                   </div>
                 </div>
-                <div class="card-body">                                  
+                <div class="card-body">                
                   <div class="tabs-content">
                     <div class="tab-pan active show first:rounded-tl-none rounded-5" data-tabContent="1">
                       <div class="flex flex-wrap gap-2 justify-center">
                         <div class="stack mb-3"> 
-                          <div class="stack-item card bg-danger text-white shawod-none rounded-2xl !w-auto !h-auto">
+                          <div class="stack-item card bg-danger text-white shawod-none rounded-2xl !w-auto !h-auto dark:bg-danger">
                             <div class="card-body"> 
                               <h3 class="card-title">Latest News</h3>
                               <p>Click here, for more latest update!!</p>
                             </div>
                           </div>
-                          <div class="stack-item card bg-danger text-white shawod-none rounded-2xl !w-auto !h-auto">
+                          <div class="stack-item card bg-danger text-white shawod-none rounded-2xl !w-auto !h-auto dark:bg-danger">
                             <div class="card-body"> 
                               <h3 class="card-title">Latest News</h3>
                               <p>Click here, for more latest update!!</p>
                             </div>
                           </div>
-                          <div class="stack-item card bg-danger text-white shawod-none rounded-2xl !w-auto !h-auto">
+                          <div class="stack-item card bg-danger text-white shawod-none rounded-2xl !w-auto !h-auto dark:bg-danger">
                             <div class="card-body"> 
                               <h3 class="card-title">Latest News</h3>
                               <p>Click here, for more latest update!!</p>
@@ -1435,19 +1435,19 @@
                       <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"> <i data-feather="clipboard"></i></button>
                       <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap justify-center gap-2"&gt;
    &lt;div class="mb-3 stack"&gt;
-       &lt;div class="stack-item card bg-danger text-white shawod-none rounded-2xl !w-auto !h-auto"&gt;
+       &lt;div class="stack-item card bg-danger text-white shawod-none rounded-2xl !w-auto !h-auto dark:bg-sidebar-dark2"&gt;
            &lt;div class="card-body"&gt; 
                &lt;h3 class="card-title"&gt; Latest News &lt;/h3&gt;
                &lt;p&gt; Click here, for more latest update!! &lt;/p&gt;
            &lt;/div&gt;
        &lt;/div&gt;
-       &lt;div class="stack-item card bg-danger text-white shawod-none rounded-2xl !w-auto !h-auto"&gt;
+       &lt;div class="stack-item card bg-danger text-white shawod-none rounded-2xl !w-auto !h-auto dark:bg-sidebar-dark2"&gt;
            &lt;div class="card-body"&gt; 
                &lt;h3 class="card-title"&gt; Latest News &lt;/h3&gt;
                &lt;p&gt; Click here, for more latest update!! &lt;/p&gt;
            &lt;/div&gt;
        &lt;/div&gt;
-       &lt;div class="stack-item card bg-danger text-white shawod-none rounded-2xl !w-auto !h-auto"&gt;
+       &lt;div class="stack-item card bg-danger text-white shawod-none rounded-2xl !w-auto !h-auto dark:bg-sidebar-dark2"&gt;
            &lt;div class="card-body"&gt; 
                &lt;h3 class="card-title"&gt; Latest News &lt;/h3&gt;
                &lt;p&gt; Click here, for more latest update!! &lt;/p&gt;
@@ -1477,19 +1477,19 @@
                     <div class="tab-pan active show first:rounded-tl-none rounded-5" data-tabContent="1">
                       <div class="flex flex-wrap gap-2 justify-center">
                         <div class="stack mb-3"> 
-                          <div class="stack-item card bg-info text-white shawod-none rounded-2xl !w-auto !h-auto">
+                          <div class="stack-item card bg-info text-white shawod-none rounded-2xl !w-auto !h-auto dark:bg-info">
                             <div class="card-body"> 
                               <h3 class="card-title">Notifications</h3>
                               <p>You have 4 unread messages. Tap to see</p>
                             </div>
                           </div>
-                          <div class="stack-item card bg-danger text-white shawod-none rounded-2xl !w-auto !h-auto">
+                          <div class="stack-item card bg-danger text-white shawod-none rounded-2xl !w-auto !h-auto dark:bg-danger">
                             <div class="card-body"> 
                               <h3 class="card-title">Notifications</h3>
                               <p>You have 4 unread messages. Tap to see</p>
                             </div>
                           </div>
-                          <div class="stack-item card bg-warning text-white shawod-none rounded-2xl !w-auto !h-auto">
+                          <div class="stack-item card bg-warning text-white shawod-none rounded-2xl !w-auto !h-auto dark:bg-warning">
                             <div class="card-body"> 
                               <h3 class="card-title">Notifications</h3>
                               <p>You have 4 unread messages. Tap to see</p>
@@ -1502,19 +1502,19 @@
                       <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"> <i data-feather="clipboard"></i></button>
                       <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap justify-center gap-2"&gt;
    &lt;div class="mb-3 stack"&gt;
-       &lt;div class="stack-item card bg-info text-white shawod-none rounded-2xl !w-auto !h-auto"&gt;
+       &lt;div class="stack-item card bg-info text-white shawod-none rounded-2xl !w-auto !h-auto dark:bg-info"&gt;
            &lt;div class="card-body"&gt; 
                &lt;h3 class="card-title"&gt; Notifications &lt;/h3&gt;
                &lt;p&gt; You have 4 unread messages. Tap to see &lt;/p&gt;
            &lt;/div&gt;
        &lt;/div&gt;
-       &lt;div class="stack-item card bg-danger text-white shawod-none rounded-2xl !w-auto !h-auto"&gt;
+       &lt;div class="stack-item card bg-danger text-white shawod-none rounded-2xl !w-auto !h-auto dark:bg-danger"&gt;
            &lt;div class="card-body"&gt; 
                &lt;h3 class="card-title"&gt; Notifications &lt;/h3&gt;
                &lt;p&gt; You have 4 unread messages. Tap to see &lt;/p&gt;
            &lt;/div&gt;
        &lt;/div&gt;
-       &lt;div class="stack-item card bg-warning text-white shawod-none rounded-2xl !w-auto !h-auto"&gt;
+       &lt;div class="stack-item card bg-warning text-white shawod-none rounded-2xl !w-auto !h-auto dark:dark:bg-warning"&gt;
            &lt;div class="card-body"&gt; 
                &lt;h3 class="card-title"&gt; Notifications &lt;/h3&gt;
                &lt;p&gt; You have 4 unread messages. Tap to see &lt;/p&gt;
