--- a/html/template/wow-animation.html
+++ b/html/template/wow-animation.html
@@ -1149,8 +1149,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="flex flex-wrap items-center justify-center w-full gap-2"&gt; 
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"> <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap items-center justify-center w-full gap-2"&gt; 
   &lt;div&gt;
       &lt;div class="circle wow animate__rollIn" data-wow-delay="0.1s" data-wow-duration="1.5s""&gt;&lt;/div&gt;
   &lt;/div&gt; 
@@ -1182,8 +1182,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="flex flex-wrap items-center justify-center w-full gap-2"&gt; 
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"><i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap items-center justify-center w-full gap-2"&gt; 
   &lt;div&gt; 
       &lt;div class="circle wow animate__shakeX" data-wow-delay="0.1s" data-wow-duration="1.5s""&gt;&lt;/div&gt;
   &lt;/div&gt; 
@@ -1215,8 +1215,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="flex flex-wrap items-center justify-center w-full gap-2"&gt; 
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"> <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap items-center justify-center w-full gap-2"&gt; 
   &lt;div&gt; 
       &lt;div class="circle wow animate__heartBeat" data-wow-delay="0.1s" data-wow-duration="1.5s""&gt;&lt;/div&gt;
   &lt;/div&gt; 
@@ -1248,8 +1248,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="flex flex-wrap items-center justify-center w-full gap-2"&gt; 
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"> <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap items-center justify-center w-full gap-2"&gt; 
   &lt;div&gt; 
       &lt;div class="circle wow animate__zoomInLeft" data-wow-delay="0.1s" data-wow-duration="1.5s""&gt;&lt;/div&gt;
   &lt;/div&gt; 
@@ -1281,8 +1281,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="flex flex-wrap items-center justify-center w-full gap-2"&gt; 
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"> <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap items-center justify-center w-full gap-2"&gt; 
   &lt;div&gt; 
       &lt;div class="circle wow animate__zoomOutRight" data-wow-delay="0.1s" data-wow-duration="1.5s""&gt;&lt;/div&gt;
   &lt;/div&gt; 
@@ -1314,8 +1314,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="flex flex-wrap items-center justify-center w-full gap-2"&gt; 
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"> <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap items-center justify-center w-full gap-2"&gt; 
   &lt;div&gt; 
       &lt;div class="circle wow animate__lightSpeedInRight" data-wow-delay="0.1s" data-wow-duration="1.5s""&gt;&lt;/div&gt;
   &lt;/div&gt; 
@@ -1347,8 +1347,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="flex flex-wrap items-center justify-center w-full gap-2"&gt; 
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"> <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap items-center justify-center w-full gap-2"&gt; 
   &lt;div&gt; 
       &lt;div class="circle wow animate__fadeInDownBig" data-wow-delay="0.1s" data-wow-duration="1.5s""&gt;&lt;/div&gt;
   &lt;/div&gt; 
@@ -1380,8 +1380,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="flex flex-wrap items-center justify-center w-full gap-2"&gt; 
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"> <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap items-center justify-center w-full gap-2"&gt; 
   &lt;div&gt; 
       &lt;div class="circle wow animate__fadeInDown" data-wow-delay="0.1s" data-wow-duration="1.5s""&gt;&lt;/div&gt;
   &lt;/div&gt; 
@@ -1413,8 +1413,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="flex flex-wrap items-center justify-center w-full gap-2"&gt; 
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"> <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap items-center justify-center w-full gap-2"&gt; 
   &lt;div&gt; 
       &lt;div class="circle wow animate__fadeOutRightBig" data-wow-delay="0.1s" data-wow-duration="1.5s""&gt;&lt;/div&gt;
   &lt;/div&gt; 
@@ -1446,8 +1446,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="flex flex-wrap items-center justify-center w-full gap-2"&gt; 
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"> <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap items-center justify-center w-full gap-2"&gt; 
   &lt;div&gt; 
       &lt;div class="circle wow animate__backOutRight" data-wow-delay="0.1s" data-wow-duration="1.5s""&gt;&lt;/div&gt;
   &lt;/div&gt; 
@@ -1479,8 +1479,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="flex flex-wrap items-center justify-center w-full gap-2"&gt; 
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"> <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap items-center justify-center w-full gap-2"&gt; 
   &lt;div&gt; 
       &lt;div class="circle wow animate__backInUp" data-wow-delay="0.1s" data-wow-duration="1.5s""&gt;&lt;/div&gt;
   &lt;/div&gt; 
@@ -1512,8 +1512,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="flex flex-wrap items-center justify-center w-full gap-2"&gt; 
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"> <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap items-center justify-center w-full gap-2"&gt; 
   &lt;div&gt; 
       &lt;div class="circle wow animate__slideInUp" data-wow-delay="0.1s" data-wow-duration="1.5s""&gt;&lt;/div&gt;
   &lt;/div&gt; 
@@ -1537,9 +1537,9 @@
                 <div class="card-body">
                   <div class="grid grid-cols-1 gap-5 md:gap-1">
                     <div class="col-span-1 md:col-span-2">                                           
-                      <pre class="overflow-auto language-js custom-scroll"><code>  plugins: [
+                      <pre class="overflow-auto language-js custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">  plugins: [
       require('tailwindcss-animatecss')({
-          classes: []                                       
+          classes: []                             
       }),
   ] </code></pre>
                     </div>
@@ -1556,16 +1556,18 @@
                         <button class="tab tab-lifted tab-link" data-tabFilter="2">For HTML User  </button>
                       </div>
                       <div class="tabs-content">
-                        <div class="tab-pan fade active show first:rounded-tl-none rounded-5" data-tabContent="1">
-                          <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                          <pre class="overflow-auto language-html custom-scroll"><code></code>  &lt;!-- you just need to true the wow variable in page --&gt;
-  -var wow=true;</pre>
-                        </div>
-                        <div class="relative tab-pan fade group first:rounded-tl-none rounded-5" data-tabContent="2">
-                          <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                          <pre class="overflow-auto language-html custom-scroll"><code>  &lt;script src="../../assets/js/wow.js"&gt; &lt;/script&gt;
-  &lt;script src="../../assets/js/wow-custom.js"&gt; &lt;/script&gt;</code></pre>
-                        </div>
+                        <div class="tab-pan fade active show first:rounded-tl-none rounded-5" data-tabContent="1"></div>
+                        <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"> <i data-feather="clipboard"></i>
+                          <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"></pre>
+                        </button><code class="dark:bg-sidebar-dark2">
+                            &lt;!-- you just need to true the wow variable in page --&gt;
+                            -var wow=true;</code>
+                        <div class="relative tab-pan fade group first:rounded-tl-none rounded-5" data-tabContent="2"></div>
+                        <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"> <i data-feather="clipboard"></i>
+                          <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"></pre>
+                        </button><code class="dark:bg-sidebar-dark2">
+                            &lt;script src="../../assets/js/wow.js"&gt; &lt;/script&gt;
+                            &lt;script src="../../assets/js/wow-custom.js"&gt; &lt;/script&gt;</code>
                       </div>
                     </div>
                   </div>
