--- a/assets/postcss/components/_breadcrumb.css
+++ b/assets/postcss/components/_breadcrumb.css
@@ -10,7 +10,7 @@
         .breadcrumb-items {
           @apply items-center flex font-semibold whitespace-nowrap;
           a {
-            @apply h-7 flex items-center justify-center relative bg-gray-extralight w-[1.875rem];
+            @apply h-7 flex items-center justify-center relative bg-gray-extralight dark:bg-sidebar-dark2 w-[1.875rem];
             svg {
               @apply w-4 h-4 stroke-primary;
             }
@@ -28,7 +28,7 @@
           .breadcrumb-items {
             @apply whitespace-nowrap;
             a {
-              @apply bg-white-light;
+              @apply bg-white-light  dark:bg-sidebar-dark2;
               svg {
                 @apply stroke-white;
               }
@@ -60,7 +60,7 @@
           .breadcrumb-items {
             @apply whitespace-nowrap;
             a {
-              @apply font-extrabold bg-transparent;
+              @apply font-extrabold bg-transparent dark:bg-transparent;
             }
             &.active {
               @apply font-light;
@@ -76,7 +76,7 @@
           .breadcrumb-items {
             @apply font-medium whitespace-nowrap;
             a {
-              @apply bg-gray-light border;
+              @apply bg-gray-light border dark:border-light;
               svg {
                 @apply stroke-title;
               }
@@ -93,7 +93,7 @@
           .breadcrumb-items {
             @apply whitespace-nowrap;
             a {
-              @apply bg-transparent w-auto;
+              @apply bg-transparent w-auto dark:bg-transparent;
             }
           }
           li {
