--- a/assets/pug/pages/template/radial-progress.pug
+++ b/assets/pug/pages/template/radial-progress.pug
@@ -113,24 +113,23 @@ html(lang='en')
                   div.tabs-content
                     div(data-tabContent="1" class="tab-pan active show first:rounded-tl-none rounded-5")
                       div.flex.items-center.justify-center.flex-wrap.gap-4
-                        div.radial-progress.radial-sm.text-primary(style='--value:5;') 5% 
-                        div.radial-progress.radial-sm.text-secondary(style='--value:25;') 25% 
-                        div.radial-progress.radial-sm.text-info(style='--value:57;') 57% 
-                        div.radial-progress.radial-sm.text-success(style='--value:78;') 78%
-                        div.radial-progress.radial-sm.text-warning(style='--value:88;') 88%
+                        div.radial-progress.radial-sm.text-primary(style='--value:5;'  class="dark:bg-sidebar-dark2" ) 5% 
+                        div.radial-progress.radial-sm.text-secondary(style='--value:25;'  class="dark:bg-sidebar-dark2" ) 25% 
+                        div.radial-progress.radial-sm.text-info(style='--value:57;'  class="dark:bg-sidebar-dark2" ) 57% 
+                        div.radial-progress.radial-sm.text-success(style='--value:78;'  class="dark:bg-sidebar-dark2" ) 78%
+                        div.radial-progress.radial-sm.text-warning(style='--value:88;'  class="dark:bg-sidebar-dark2" ) 88%
                     div(data-tabContent="2" class="relative tab-pan copyParent group first:rounded-tl-none rounded-5")
                       button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white")   
                         i(data-feather="clipboard")
                       pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2")
                         code(class="dark:bg-sidebar-dark2")
                           |&lt;div class="flex flex-wrap items-center justify-center gap-2"&gt;
-                          |    &lt;div class="radial-progress radial-sm text-primary" style="--value:5;"&gt; 5% &lt;/div&gt;
-                          |    &lt;div class="radial-progress radial-sm text-secondary" style="--value:25;"&gt; 25% &lt;/div&gt;
-                          |    &lt;div class="radial-progress radial-sm text-info" style="--value:57;"&gt; 57% &lt;/div&gt;
-                          |    &lt;div class="radial-progress radial-sm text-success" style="--value:78;"&gt; 78% &lt;/div&gt;
-                          |    &lt;div class="radial-progress radial-sm text-warning" style="--value:88;"&gt; 88% &lt;/div&gt;
+                          |    &lt;div class="radial-progress radial-sm  dark:bg-sidebar-dark2 text-primary" style="--value:5;  " "&gt; 5% &lt;/div&gt;
+                          |    &lt;div class="radial-progress radial-sm  dark:bg-sidebar-dark2 text-secondary" style="--value:25;  " "&gt; 25% &lt;/div&gt;
+                          |    &lt;div class="radial-progress radial-sm  dark:bg-sidebar-dark2 text-info" style="--value:57;  " "&gt; 57% &lt;/div&gt;
+                          |    &lt;div class="radial-progress radial-sm  dark:bg-sidebar-dark2 text-success" style="--value:78;  " "&gt; 78% &lt;/div&gt;
+                          |    &lt;div class="radial-progress radial-sm  dark:bg-sidebar-dark2 text-warning" style="--value:88;  " "&gt; 88% &lt;/div&gt;
                           |&lt;/div&gt;
-
             div.col-span-6(class="xl:col-span-12")
               div.card.tabs
                 div.card-header.pb-2.header-bottom-border
@@ -145,22 +144,22 @@ html(lang='en')
                     div(data-tabContent="1" class="tab-pan active show first:rounded-tl-none rounded-5")
                       div.flex.items-center.justify-center.flex-wrap.gap-4
                         div.flex.flex-col.justify-center.items-center.gap-2.text-primary
-                          div.radial-progress(style='--value:5;') 
+                          div.radial-progress(style='--value:5;' class="dark:bg-sidebar-dark2") 
                           span 5%
                         div.flex.flex-col.justify-center.items-center.gap-2.text-secondary
-                          div.radial-progress(style='--value:25;') 
+                          div.radial-progress(style='--value:25;' class="dark:bg-sidebar-dark2") 
                           span 25% 
                         div.flex.flex-col.justify-center.items-center.gap-2.text-info
-                          div.radial-progress(style='--value:57;') 
+                          div.radial-progress(style='--value:57;' class="dark:bg-sidebar-dark2") 
                           span 57% 
                         div.flex.flex-col.justify-center.items-center.gap-2.text-success
-                          div.radial-progress(style='--value:78;') 
+                          div.radial-progress(style='--value:78;' class="dark:bg-sidebar-dark2") 
                           span 78%
                         div.flex.flex-col.justify-center.items-center.gap-2.text-warning
-                          div.radial-progress(style='--value:88;') 
+                          div.radial-progress(style='--value:88;' class="dark:bg-sidebar-dark2") 
                           span 88%
                         div.flex.flex-col.justify-center.items-center.gap-2.text-danger
-                          div.radial-progress(style='--value:97;') 
+                          div.radial-progress(style='--value:97;' class="dark:bg-sidebar-dark2") 
                           span 97%
                     div(data-tabContent="2" class="relative tab-pan copyParent group first:rounded-tl-none rounded-5")
                       button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white")   
@@ -169,27 +168,27 @@ html(lang='en')
                         code(class="dark:bg-sidebar-dark2")
                           |&lt;div class="flex flex-wrap items-center justify-center gap-2"&gt;
                           |    &lt;div class="flex flex-col items-center justify-center gap-2 text-primary"&gt;
-                          |        &lt;div class="radial-progress bg-gray-light" style="--value:5;"&gt;&lt;/div&gt;
+                          |        &lt;div class="radial-progress bg-gray-light dark:bg-sidebar-dark2" style="--value:5;"&gt;&lt;/div&gt;
                           |        &lt;span&gt; 5% &lt;/span&gt;
                           |    &lt;/div&gt;
                           |    &lt;div class="flex flex-col items-center justify-center gap-2 text-secondary"&gt;
-                          |        &lt;div class="radial-progress bg-gray-light" style="--value:25;"&gt; 25% &lt;/div&gt;
+                          |        &lt;div class="radial-progress bg-gray-light dark:bg-sidebar-dark2" style="--value:25;"&gt; 25% &lt;/div&gt;
                           |        &lt;span&gt; 25% &lt;/span&gt;
                           |    &lt;/div&gt;
                           |    &lt;div class="flex flex-col items-center justify-center gap-2 text-info"&gt;
-                          |        &lt;div class="radial-progress bg-gray-light" style="--value:57;"&gt; 57% &lt;/div&gt;
+                          |        &lt;div class="radial-progress bg-gray-light dark:bg-sidebar-dark2" style="--value:57;"&gt; 57% &lt;/div&gt;
                           |        &lt;span&gt; 57% &lt;/span&gt;
                           |    &lt;/div&gt;
                           |    &lt;div class="flex flex-col items-center justify-center gap-2 text-success"&gt;
-                          |        &lt;div class="radial-progress bg-gray-light" style="--value:78;"&gt; 78% &lt;/div&gt;
+                          |        &lt;div class="radial-progress bg-gray-light dark:bg-sidebar-dark2" style="--value:78;"&gt; 78% &lt;/div&gt;
                           |        &lt;span&gt; 78% &lt;/span&gt;
                           |    &lt;/div&gt;
                           |    &lt;div class="flex flex-col items-center justify-center gap-2 text-warning"&gt;
-                          |        &lt;div class="radial-progress bg-gray-light" style="--value:88;"&gt; 88% &lt;/div&gt;
+                          |        &lt;div class="radial-progress bg-gray-light dark:bg-sidebar-dark2" style="--value:88;"&gt; 88% &lt;/div&gt;
                           |        &lt;span&gt; 88% &lt;/span&gt;
                           |    &lt;/div&gt;
                           |    &lt;div class="flex flex-col items-center justify-center gap-2 text-danger"&gt;
-                          |        &lt;div class="radial-progress bg-gray-light" style="--value:97;"&gt; 97% &lt;/div&gt;
+                          |        &lt;div class="radial-progress bg-gray-light dark:bg-sidebar-dark2" style="--value:97;"&gt; 97% &lt;/div&gt;
                           |        &lt;span&gt; 97% &lt;/span&gt;
                           |    &lt;/div&gt;
                           |&lt;/div&gt;
@@ -209,23 +208,22 @@ html(lang='en')
                   div.tabs-content
                     div(data-tabContent="1" class="tab-pan active show first:rounded-tl-none rounded-5")
                       div.flex.items-center.justify-center.flex-wrap.gap-4
-                        div.radial-progress.radial-xs.text-primary(style="--value:70;") 70% 
-                        div.radial-progress.radial-sm.text-secondary(style="--value:70;") 70% 
-                        div.radial-progress.radial-md.text-info(style="--value:70;") 70% 
-                        div.radial-progress.radial-lg.text-success(style="--value:70;") 70% 
-                        div.radial-progress.radial-xl.text-warning(style="--value:70;") 70% 
-
+                        div.radial-progress.radial-xs.text-primary(style="--value:70;" class="dark:bg-sidebar-dark2") 70% 
+                        div.radial-progress.radial-sm.text-secondary(style="--value:70;" class="dark:bg-sidebar-dark2") 70% 
+                        div.radial-progress.radial-md.text-info(style="--value:70;" class="dark:bg-sidebar-dark2") 70% 
+                        div.radial-progress.radial-lg.text-success(style="--value:70;" class="dark:bg-sidebar-dark2") 70% 
+                        div.radial-progress.radial-xl.text-warning(style="--value:70;" class="dark:bg-sidebar-dark2") 70% 
                     div(data-tabContent="2" class="relative tab-pan copyParent group first:rounded-tl-none rounded-5")
                       button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white")   
                         i(data-feather="clipboard")
                       pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2")
                         code(class="dark:bg-sidebar-dark2")
                           |&lt;div class="flex flex-wrap items-center justify-center gap-2"&gt;
-                          |    &lt;div class="radial-progress radial-xs text-primary" style="--value:70;"&gt; 70% &lt;/div&gt;
-                          |    &lt;div class="radial-progress radial-sm text-primary" style="--value:70;"&gt; 70% &lt;/div&gt;
-                          |    &lt;div class="radial-progress radial-md text-primary" style="--value:70;"&gt; 70% &lt;/div&gt;
-                          |    &lt;div class="radial-progress radial-lg text-primary" style="--value:70;"&gt; 70% &lt;/div&gt;
-                          |    &lt;div class="radial-progress radial-xl text-primary" style="--value:70;"&gt; 70% &lt;/div&gt;
+                          |    &lt;div class="radial-progress radial-xs text-primary dark:bg-sidebar-dark2" style="--value:70;"&gt; 70% &lt;/div&gt;
+                          |    &lt;div class="radial-progress radial-sm text-primary dark:bg-sidebar-dark2" style="--value:70;"&gt; 70% &lt;/div&gt;
+                          |    &lt;div class="radial-progress radial-md text-primary dark:bg-sidebar-dark2" style="--value:70;"&gt; 70% &lt;/div&gt;
+                          |    &lt;div class="radial-progress radial-lg text-primary dark:bg-sidebar-dark2" style="--value:70;"&gt; 70% &lt;/div&gt;
+                          |    &lt;div class="radial-progress radial-xl text-primary dark:bg-sidebar-dark2" style="--value:70;"&gt; 70% &lt;/div&gt;
                           |&lt;/div&gt;
         // Page Body End 
         +footer("sm:flex-col flex sm:gap-1 gap-2 items-center justify-between py-[1.1875rem] shadow-footer bg-white px-body-space mt-card-gap")
