--- a/html/template/divider.html
+++ b/html/template/divider.html
@@ -1143,17 +1143,17 @@
                   <div class="tabs-content">
                     <div class="tab-pan active show first:rounded-tl-none rounded-5" data-tabContent="1">
                       <div class="flex flex-col w-full gap-2 items-center">
-                        <div class="grid h-20 card rounded-box place-items-center w-[40%] bg-[#E5E6E6] bg-opacity-[0.45] sm:w-full">content</div>
+                        <div class="grid h-20 card rounded-box place-items-center w-[40%] bg-[#E5E6E6] bg-opacity-[0.45] sm:w-full dark:bg-sidebar-dark2">content</div>
                         <div class="divider">OR   </div>
-                        <div class="grid h-20 card rounded-box place-items-center w-[40%] bg-[#E5E6E6] bg-opacity-[0.45] sm:w-full">content</div>
+                        <div class="grid h-20 card rounded-box place-items-center w-[40%] bg-[#E5E6E6] bg-opacity-[0.45] sm:w-full dark:bg-sidebar-dark2">content</div>
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
                       <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"><i data-feather="clipboard"></i></button>
                       <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-col w-full gap-2"&gt;
-   &lt;div class="grid h-20 w-[40%] card rounded-box place-items-center bg-[#E5E6E6] bg-opacity-[0.45] sm:w-full"&gt; content &lt;/div&gt; 
+   &lt;div class="grid h-20 w-[40%] card rounded-box place-items-center bg-[#E5E6E6] bg-opacity-[0.45] sm:w-full dark:bg-sidebar-dark2"&gt; content &lt;/div&gt; 
    &lt;div class="divider"&gt; OR &lt;/div&gt; 
-   &lt;div class="grid h-20 w-[40%] card rounded-box place-items-center bg-[#E5E6E6] bg-opacity-[0.45] sm:w-full"&gt; content &lt;/div&gt; 
+   &lt;div class="grid h-20 w-[40%] card rounded-box place-items-center bg-[#E5E6E6] bg-opacity-[0.45] sm:w-full dark:bg-sidebar-dark2"&gt; content &lt;/div&gt; 
 &lt;/div&gt;</code></pre>
                     </div>
                   </div>
@@ -1176,17 +1176,17 @@
                   <div class="tabs-content">
                     <div class="tab-pan active show first:rounded-tl-none rounded-5" data-tabContent="1">
                       <div class="flex flex-col w-full gap-2 items-center">
-                        <div class="grid h-20 card rounded-box place-items-center w-[40%] bg-[#E5E6E6] bg-opacity-[0.45] sm:w-full">content</div>
+                        <div class="grid h-20 card rounded-box place-items-center w-[40%] bg-[#E5E6E6] bg-opacity-[0.45] sm:w-full dark:bg-sidebar-dark2">content</div>
                         <div class="divider before:w-full after:w-0">  </div>
-                        <div class="grid h-20 card rounded-box place-items-center w-[40%] bg-[#E5E6E6] bg-opacity-[0.45] sm:w-full">content</div>
+                        <div class="grid h-20 card rounded-box place-items-center w-[40%] bg-[#E5E6E6] bg-opacity-[0.45] sm:w-full dark:bg-sidebar-dark2">content</div>
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
                       <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"><i data-feather="clipboard"></i></button>
                       <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-col w-full gap-2"&gt;
-   &lt;div class="grid h-20 w-[40%] card rounded-box place-items-center bg-[#E5E6E6] bg-opacity-[0.45] sm:w-full"&gt; content &lt;/div&gt; 
+   &lt;div class="grid h-20 w-[40%] card rounded-box place-items-center bg-[#E5E6E6] bg-opacity-[0.45] sm:w-full dark:bg-sidebar-dark2"&gt; content &lt;/div&gt; 
    &lt;div class="divider before:w-full after:w-0"&gt; OR &lt;/div&gt; 
-   &lt;div class="grid h-20 w-[40%] card rounded-box place-items-center bg-[#E5E6E6] bg-opacity-[0.45] sm:w-full"&gt; content &lt;/div&gt; 
+   &lt;div class="grid h-20 w-[40%] card rounded-box place-items-center bg-[#E5E6E6] bg-opacity-[0.45] sm:w-full dark:bg-sidebar-dark2"&gt; content &lt;/div&gt; 
 &lt;/div&gt;</code></pre>
                     </div>
                   </div>
@@ -1209,17 +1209,17 @@
                   <div class="tabs-content">
                     <div class="tab-pan active show first:rounded-tl-none rounded-5" data-tabContent="1">
                       <div class="flex w-full gap-2">
-                        <div class="grid h-20 card rounded-box place-items-center w-9/12 bg-[#E5E6E6] bg-opacity-[0.45] sm:w-full">content</div>
+                        <div class="grid h-20 card rounded-box place-items-center w-9/12 bg-[#E5E6E6] bg-opacity-[0.45] sm:w-full dark:bg-sidebar-dark2">content</div>
                         <div class="divider horizontal w-auto">OR   </div>
-                        <div class="grid h-20 card rounded-box place-items-center w-9/12 bg-[#E5E6E6] bg-opacity-[0.45] sm:w-full">content</div>
+                        <div class="grid h-20 card rounded-box place-items-center w-9/12 bg-[#E5E6E6] bg-opacity-[0.45] sm:w-full dark:bg-sidebar-dark2">content</div>
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
                       <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"><i data-feather="clipboard"></i></button>
                       <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex w-full gap-2"&gt;
-   &lt;div class="grid h-20 card rounded-box place-items-center w-9/12 bg-[#E5E6E6] bg-opacity-[0.45] sm:w-full"&gt; content &lt;/div&gt; 
+   &lt;div class="grid h-20 card rounded-box place-items-center w-9/12 bg-[#E5E6E6] bg-opacity-[0.45] sm:w-full dark:bg-sidebar-dark2"&gt; content &lt;/div&gt; 
    &lt;div class="w-auto divider horizontal"&gt; OR &lt;/div&gt; 
-   &lt;div class="grid h-20 card rounded-box place-items-center w-9/12 bg-[#E5E6E6] bg-opacity-[0.45] sm:w-full"&gt; content &lt;/div&gt; 
+   &lt;div class="grid h-20 card rounded-box place-items-center w-9/12 bg-[#E5E6E6] bg-opacity-[0.45] sm:w-full dark:bg-sidebar-dark2"&gt; content &lt;/div&gt; 
 &lt;/div&gt;</code></pre>
                     </div>
                   </div>
@@ -1242,17 +1242,17 @@
                   <div class="tabs-content">
                     <div class="tab-pan active show first:rounded-tl-none rounded-5" data-tabContent="1">
                       <div class="flex w-full gap-2 lg:flex-col md:items-center">
-                        <div class="grid h-20 card rounded-box place-items-center w-9/12 bg-[#E5E6E6] bg-opacity-[0.45] lg:w-full md:w-[40%] sm:w-full">content</div>
+                        <div class="grid h-20 card rounded-box place-items-center w-9/12 bg-[#E5E6E6] bg-opacity-[0.45] lg:w-full md:w-[40%] sm:w-full dark:bg-sidebar-dark2">content</div>
                         <div class="divider min-lg:w-auto min-lg:horizontal lg:w-full md:w-[40%] sm:w-full">OR  </div>
-                        <div class="grid h-20 card rounded-box place-items-center w-9/12 bg-[#E5E6E6] bg-opacity-[0.45] lg:w-full md:w-[40%] sm:w-full">content</div>
+                        <div class="grid h-20 card rounded-box place-items-center w-9/12 bg-[#E5E6E6] bg-opacity-[0.45] lg:w-full md:w-[40%] sm:w-full dark:bg-sidebar-dark2">content</div>
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
                       <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"><i data-feather="clipboard"></i></button>
                       <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex w-full gap-2 lg:flex-col"&gt;
-   &lt;div class="grid h-20 card rounded-box place-items-center w-9/12 bg-[#E5E6E6] bg-opacity-[0.45] lg:w-full"&gt; content &lt;/div&gt; 
+   &lt;div class="grid h-20 card rounded-box place-items-center w-9/12 bg-[#E5E6E6] bg-opacity-[0.45] lg:w-full dark:bg-sidebar-dark2"&gt; content &lt;/div&gt; 
    &lt;div class="divider min-lg:w-auto min-lg:horizontal lg:w-full md:w-[40%] sm:w-full"&gt; OR &lt;/div&gt; 
-   &lt;div class="grid h-20 card rounded-box place-items-center w-9/12 bg-[#E5E6E6] bg-opacity-[0.45] lg:w-full"&gt; content &lt;/div&gt; 
+   &lt;div class="grid h-20 card rounded-box place-items-center w-9/12 bg-[#E5E6E6] bg-opacity-[0.45] lg:w-full dark:bg-sidebar-dark2"&gt; content &lt;/div&gt; 
 &lt;/div&gt;</code></pre>
                     </div>
                   </div>
